--- a/goodbye.html
+++ b/goodbye.html
@@ -3,5 +3,7 @@
 
 <ul>
   <li> English: Goodbye, friends! </li>
+  <li> Vietnamese:  Chao, ban! </li>
+  <li> Italian: Ciao, amici!  </li>
   <li> Spanish:  Adios, amigos! </li>
 </ul>
